feat(Fullstack): add wedding list ID to gift categories, allow user to save categories when saving or updating a gift and optimize gift reordering
